# metropolis_spin

./: .gitignore  README.md
Scripts/: clr.py  clr_alt.py  clr_lot_v1.py  clr_lot_v2.py  clr_v1.py  clr_v2.py  clrf.py  clrf_v1.py  clrf_v2.py  dados_canonico.ipynb  detalhes_simulação  experimento_01.sh  readme  run.sh  runScale.sh  run_batch.sh  run_batch_01.sh  run_clrf.sh  testelistas.py
exemplos/: metro.py  metro_plus.py  testeJit.py
metrospin/: pyproject.toml
metrospin/metrospin/: __main__.py
notebooks/: Artigo-RFLRIM.ipynb  Artigo-RFLRIM_org.ipynb  LRIM_no-field.ipynb  RFLRIM_field.ipynb  Teste_01.ipynb  testes.ipynb
