[tool.poetry]
name = "metrospin"
version = "0.1.0"
description = ""
authors = ["etvorellana <evalero@uesc.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"
ipykernel = "^6.29.3"
numba = "^0.59.0"
matplotlib = "^3.8.3"
scipy = "^1.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
